<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.catas</groupId>
    <artifactId>Wicked-Proxy</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>gitlab-supernaut-maven</id>
            <url>https://gitlab.com/api/v4/projects/26584840/packages/maven</url>
        </repository>
        <repository>
            <id>release</id>
            <url>http://maven.java.net/content/repositories/releases/</url>
        </repository>
    </repositories>

    <modules>
        <module>gui</module>
        <module>api</module>
        <module>common</module>
        <module>proxy-server</module>
    </modules>

    <properties>
        <!-- <maven.compiler.source>17</maven.compiler.source> -->
        <!-- <maven.compiler.target>17</maven.compiler.target> -->
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.plgin.version>3.8.1</maven.compiler.plgin.version>
        <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
       <!-- <javafx.version>19.0.2.12</javafx.version> -->
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <gluonfx.maven.plugin.version>1.0.24</gluonfx.maven.plugin.version>
        <gluonfx.target>host</gluonfx.target>
        <javafx.version>22.0.1</javafx.version>
        <micronaut.version>3.4.4</micronaut.version>
        <supernaut.version>0.4.0</supernaut.version>
        <slf4j.version>2.0.7</slf4j.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <junit.version>4.13.1</junit.version>
        <!-- <lombok.version>1.18.26</lombok.version> -->
        <lombok.version>1.18.36</lombok.version>
        <maven.sureplugin.version>3.0.0-M5</maven.sureplugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jfoenix.version>9.0.10</jfoenix.version>
        <ikonli.version>12.3.1</ikonli.version>
        <netty.version>4.1.90.Final</netty.version>
        <jakarta.version>2.0.1</jakarta.version>
        <ehcache.version>3.10.8</ehcache.version>
        <richtextfx.version>0.11.1</richtextfx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.sureplugin.version}</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>